@@ -1,3 +1,7 @@
+2002-06-01  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gumps/Paperdoll_gump.cc: Show selected items in gumps.
+
 2002-05-30  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gamemap.cc,gamewin.cc,etc:  Locate_shape() finds next/prev shape
